# smol-mind

./: .gitignore  README.md  pyproject.toml
examples/: basic.py  benchmark.py  multiagent.py  openclaw_bridge.py  profiler.py
smolmind/: __init__.py
smolmind/adapters/: __init__.py  lmstudio.py  ollama.py  openai_compat.py
smolmind/benchmark/: __init__.py  suite.py  tasks.py
smolmind/core/: __init__.py  agent.py  executor.py  memory.py  orchestrator.py  profiler.py  trace.py  verifier.py
smolmind/multiagent/: __init__.py  coordinator.py  swarm.py  worker.py
smolmind/openclaw/: __init__.py  skill_bridge.py
smolmind/sandbox/: __init__.py  bash_sandbox.py  python_sandbox.py  web_sandbox.py
